code/rollout-weighted.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: rollouts-demo
spec:
  strategy:
    canary:
      canaryService: rollouts-demo-canary
      stableService: rollouts-demo
      trafficRouting:
        traefik:
          weightedTraefikServiceName: rollouts-service
      steps:
      - setWeight: 5
      - pause: {}
      - setWeight: 10
      - pause: {duration: 30}
      - setWeight: 30
      - pause: {duration: 30}
      - setWeight: 60
      - pause: {duration: 30}
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: rollouts-demo
  template:
    metadata:
      labels:
        app: rollouts-demo
    spec:
      containers:
      - name: rollouts-demo
        image: argoproj/rollouts-demo:blue
        ports:
        - name: http
          containerPort: 8080
          protocol: TCP
        resources:
          requests:
            memory: 32Mi
            cpu: 5m
